--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "jquery.foo",
-	"version": "0.0.1.a.2",
+	"version": "0.0.1a3",
 	"title": "The jQuery Foo Plugin",
 	"author": {
 		"name": "Scott González",
